--- a/homework-number-5.Rmd
+++ b/homework-number-5.Rmd
@@ -5,6 +5,144 @@ date: "November 14, 2016"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+Using the "KamilarAndCooperData.csv" dataset, run a linear regression looking at log(HomeRange_km2) in relation to log(Body_mass_female_mean) and report your β coeffiecients (slope and intercept).
+```{r}
+d<-read.csv("https://raw.githubusercontent.com/difiore/ADA2016/master/KamilarAndCooperData.csv", header=TRUE, sep=",", stringsAsFactors = TRUE)
+head(d)
+colnames(d)
+m<-lm(data=d, log(HomeRange_km2)~ log(Body_mass_female_mean))
+sm<- summary(m)
+sm$coefficients
+```
+So, 
+βo=-9.44
+βx=1.03
+
+Home range size gets larger with female body size. 
+
+Then, use bootstrapping to sample from your data 1000 times with replacement, each time fitting the same model and calculating the same coefficients. This generates a sampling distribution for each β coefficient.
+
+```{r}
+beta.oh<- NULL
+beta.x<-NULL
+for (i in 1:1000) {
+    mysamp<-d[sample(1:nrow(d), replace = TRUE),]
+    l<- lm(data=mysamp, log(HomeRange_km2)~ log(Body_mass_female_mean))
+    s<- summary(l)
+    sbeta.oh[i] <- s$coefficients[1,1]
+    beta.x[i] <- s$coefficients[2,1]
+    
+}
+beta.oh
+beta.x
+betas<-cbind(beta.oh, beta.x)
+
+
+```
+
+
+
+Estimate the standard error for each of your β coefficients **as the standard deviation of the sampling distribution from your bootstrap** and determine the 95% CI for each of your β coefficients based on the appropriate quantiles from your sampling distribution.
+
+
+Standard error of Bo and Bx:
+
+```{r}
+betas<- as.data.frame(betas)
+betas$ss.b0 <- (beta.oh-mean(betas$beta.oh))^2  #sum of squares b0
+betas$ss.bx <- (beta.x-mean(betas$beta.x))^2 #sum of squares bx
+SD.B0<- sqrt(sum(betas$ss.b0)/(nrow(betas)-1)) # SD B0
+SD.Bx<- sqrt(sum(betas$ss.bx)/(nrow(betas)-1)) #SD BX
+SD.B0 
+SD.Bx
+```
+
+
+95% confidence intervals for Bo and Bx
+```{r}
+#95%CI
+#bo
+confint(betas$beta.oh, pnorm, level=0.95)
+lower.bo<- quantile(betas$beta.oh, probs=0.025)
+upper.bo<- quantile(betas$beta.oh, probs=0.975)
+lower.bo
+upper.bo
+```
+So there is a 95% chance that the true value of the intercept falls between -10.7 and -8.4. 
+```{r}
+#bo
+confint(betas$beta.oh, pnorm, level=0.95)
+lower.bx<- quantile(betas$beta.x, probs=0.025)
+upper.bx<- quantile(betas$beta.x, probs=0.975)
+lower.bx
+upper.bx
+```
+We are 95% chance that the true slope is between 0.89 and 1.20
+
+
+How does the former compare to the SE estimated from your entire dataset using the formula for standard error implemented in lm()?
+```{r}
+# sm$coefficients[,"Std. Error"] #the SE from the original data
+# SD.B0 #SE from bootstrapped data
+# SD.Bx
+bootSD<- cbind(SD.B0, SD.Bx)
+SD.comp<- rbind(sm$coefficients[,"Std. Error"], bootSD)
+rownames(SD.comp)<- c("SE of original data:", "SE of bootstrapped data:")
+SD.comp
+```
+The standard errors are  smaller in the bootstrapped data. 
+
+How does the latter compare to the 95% CI estimated from your entire dataset?
+```{r}
+confint(m) #conf interval of original model
+lower.bo
+upper.bo
+lower.bx
+upper.bx
+
+CI.bo <- cbind(lower.bo, upper.bo)
+CI.bx <- cbind(lower.bx, upper.bx)
+CI.boot <- rbind(CI.bo, CI.bx)
+colnames(CI.boot)<- c("2.5%", "97.5%")
+rownames(CI.boot)<-c("(Intercept bootstrapped", "log(Body_mass_female_mean) bootstrapped")
+CI.all <- rbind(confint(m), CI.boot)
+CI.all
+```
+The confidence intervals are fractionally smaller with the bootstrapped data, but practically the same. Not sure how to explain this. 
+
+EXTRA CREDIT: + 2
+
+Write a FUNCTION that takes as its arguments a dataframe, "d", a linear model, "m" (as a character string, e.g., "logHR~logBM"), a user-defined confidence interval level, "conf.level" (with default = 0.95), and a number of bootstrap replicates, "n" (with default = 1000). Your function should return a dataframe that includes: beta coefficient names; beta coefficients, standard errors, and upper and lower CI limits for the linear model based on your entire dataset; and mean beta coefficient estimates, SEs, and CI limits for those coefficients based on your bootstrap.
+
+v This was my stab at this but it didn't go far.
+```{r}
+
+#nevermind, make it a loop later if I have time
+mysample <- mydata[sample(1:nrow(mydata), 50,
+  	replace=FALSE),]
+
+n <-nrow(d)
+
+bootz<-function(d, n=1000, m){
+set <- list(NULL)  # sets up a dummy variable to hold our 10000 simulations
+lmset <- NULL
+for (i in 1:n) {
+    set[i] <- d[sample(1:nrow(d), replace = TRUE),]
+    lmset[i] <- lm(data=set[i], m)
+    
+}
+return(head(lmset))
+}
+bootz(d, n=1000, m="log(HomeRange_km2)~ log(Body_mass_female_mean)")
+
+The quantile() function returns, for your set of data, the observations satisfying the nth quantile.
+
+
+```
+EXTRA EXTRA CREDIT: + 1
+
+Graph each beta value from the linear model and its corresponding mean value, lower CI and upper CI from a bootstrap as a function of number of bootstraps from 10 to 200 by 10s. HINT: the beta value from the linear model will be the same for all bootstraps and the mean beta value may not differ that much!
